--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@ function kick() {
 	}
 }
 
-boot.addEventListener("load", function() { draw(0, 0); }, false);
+boot.addEventListener("load", function() { draw_boot(0); }, false);
+durian.addEventListener("load", function() { draw_durian(0); }, false);
+trash.addEventListener("load", function() { draw_trash(); }, false);
 
     </script>
   </body>
